# hands-on-large-language-model

./: .gitignore  README.md  compare-tokenizer.py  context-embedding.py  cot.py  count_token.py  embedding.py  encodings.py  hello.py  llm-token.py  llm_config.py  pyproject.toml  story.py  utils.py
ipynb/: advance-generate.ipynb  cluster.ipynb  embedding.ipynb  llm-inner.ipynb  llm-train.ipynb  multi-modal-llm.ipynb  prompt.ipynb  pyproject.toml  rag.ipynb  text-classify.ipynb
