[project]
name = "hands-on-large-language-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.1.8",
    "dotenv>=0.9.9",
    "openai>=2.7.1",
    "tiktoken>=0.12.0",
    "torch>=2.6.0",
    "transformers>=4.48.2",
]
