[project]
name = "ipynb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cohere>=5.20.0",
    "faiss-cpu>=1.13.0",
    "numpy>=2.2.2",
    "pandas>=2.3.3",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.7.2",
    "tqdm>=4.67.1",
]
