[project]
name = "ipynb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cohere>=5.20.0",
    "faiss-cpu>=1.13.0",
    "matplotlib>=3.10.7",
    "numpy>=2.2.2",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.1.2",
    "tqdm>=4.67.1",
]
